--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
@@ -12,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "helmet": "^6.0.1",
-    "mongoose": "^7.0.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "helmet": "^6.2.0",
+    "mongoose": "^7.8.2",
     "mongoose-currency": "^0.2.0",
     "morgan": "^1.10.0"
   },
